fixed navbar and gallery z-index issue

--- a/src/components/NavbarList/NavbarList.css
+++ b/src/components/NavbarList/NavbarList.css
@@ -17,7 +17,7 @@
     position: fixed;
     top: 0;
     margin: 0;
-    z-index: 10;
+    z-index: 50;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.428);
 }
   
@@ -56,7 +56,7 @@
     background-size: 100px;
     transition: all 0.5s linear;
     position: fixed;
-    z-index: 1;
+    z-index: 10;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.428);
 }
 
